--- a/bower.json
+++ b/bower.json
@@ -19,7 +19,8 @@
     "angular-ui-router": "~0.2.13",
     "angular-toggle-switch": "~1.2.1",
     "metisMenu": "~1.1.3",
-    "angular-chart.js": "~0.5.2"
+    "angular-chart.js": "~0.5.2",
+    "socket.io": "~1.3.5"
   },
   "devDependencies": {
     "angular-mocks": "1.2.16",
