--- a/bower.json
+++ b/bower.json
@@ -20,7 +20,8 @@
     "angular-toggle-switch": "~1.2.1",
     "metisMenu": "~1.1.3",
     "angular-chart.js": "~0.5.2",
-    "socket.io": "~1.3.5"
+    "socket.io": "~1.3.5",
+    "ngRadialGauge": "*"
   },
   "devDependencies": {
     "angular-mocks": "1.2.16",
